created logic to read from DB - json

--- a/trial-sans-svelte/index.html
+++ b/trial-sans-svelte/index.html
@@ -4,10 +4,22 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Framework</title>
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		<!-- include project HTML here -->
-		<h1>Framework Index</h1>
+		<header>
+			<div class="container">
+				<h1 class="page-title"></h1>
+
+			</div>
+		</header>
+		<main></main>
+		<footer>
+			<div class="container">
+				<p>For Educational Purposes only &copy; 2020</p>
+			</div>
+		</footer>
+		<script src="js/index.js"></script>
 	</body>
 </html>
