--- a/index.html
+++ b/index.html
@@ -3,23 +3,47 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Framework</title>
+		<title>Green Review</title>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
-	</head>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Kanit&display=swap" rel="stylesheet">	</head>
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="page-title"></h1>
-
+				<section class="page-title">
+					<h1>placeholder</h1>
+					<div>
+						<iframe class="youtube-link" width="560" height="315" src="https://www.youtube.com/embed/aTTx5WsswPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</section>
 			</div>
 		</header>
-		<main></main>
+		<main>
+			<div class="container">
+				<div class="image-spread">
+					<img src="img/file-not-found.jpg" alt="photo of current product">
+					<p>over all <br/><i class="fas fa-exclamation-triangle"></i></p>
+					<img src="img/file-not-found.jpg" alt="photo of product package">
+				</div>
+				<div class="rating-aspects">
+					<section><h3>Price VS Product</h3> <p>placeholder</p> <p><i class="fas fa-exclamation-triangle"></i></p></section>
+					<section><h3>Strength</h3> <p>placeholder</p> <p><i class="fas fa-exclamation-triangle"></i></p></section>
+					<section><h3>Effect Duration</h3> <p>placeholder</p> <p><i class="fas fa-exclamation-triangle"></i></p></section>
+					<section><h3>Taste</h3> <p>placeholder</p> <p><i class="fas fa-exclamation-triangle"></i></p></section>
+				</div>
+				<div class="blog-writeup">
+					<p>I was gonna take the time to sit down and write you a little letter. But I thought a song would probably be a little better. Instead of a ,letter. That you'd probably just shred up--yeah. I stumbled on your picture yesterday and it made me stop and think of. How much of a waste it'd ,be for me to put some ink to, a stupid piece a. Paper, I'd rather let you see how. Much I fucking hate you in a freestyle.</p>
+				</div>
+			</div>
+		</main>
 		<footer>
 			<div class="container">
 				<p>For Educational Purposes only &copy; 2020</p>
 			</div>
 		</footer>
+		<script src="https://kit.fontawesome.com/26d6fd008c.js" crossorigin="anonymous"></script>
 		<script src="js/index.js"></script>
 	</body>
 </html>
