adding in load data into js

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<div class="container">
 				<section class="page-title">
 					<h1>placeholder</h1>
-					<div>
-						<iframe class="youtube-link" width="560" height="315" src="https://www.youtube.com/embed/aTTx5WsswPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="youtubelink">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/U-A8-r99wTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</section>
 			</div>
@@ -24,7 +24,7 @@
 			<div class="container">
 				<div class="image-spread">
 					<img src="img/file-not-found.jpg" alt="photo of current product">
-					<p>over all <br/><i class="fas fa-exclamation-triangle"></i></p>
+					<p>over all<i class="fas fa-exclamation-triangle"></i></p>
 					<img src="img/file-not-found.jpg" alt="photo of product package">
 				</div>
 				<div class="rating-aspects">
