finish vanilla build

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<section class="page-title">
 					<h1>placeholder</h1>
 					<div class="youtubelink">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/U-A8-r99wTw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						
 					</div>
 				</section>
 			</div>
@@ -44,6 +44,6 @@
 			</div>
 		</footer>
 		<script src="https://kit.fontawesome.com/26d6fd008c.js" crossorigin="anonymous"></script>
-		<script src="js/index.js"></script>
+		<script src="js/index.js" async ></script>
 	</body>
 </html>
