added nav bar, not functional yet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 	<body>
 		<header>
 			<div class="container">
+				<nav>
+					<div class="burger">
+						<i class="fas fa-bars"></i>
+					</div>
+					<div class="dropdowntitle not-visible">
+						<p>select...</p><i class="fas fa-chevron-down"></i>
+					</div>
+					<div class="product-list not-visible">
+						<ul>
+							<li>
+								<a href="?productID=007"> 007 TEST LINK</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+			<div class="container">
 				<section class="page-title">
 					<h1>placeholder</h1>
 					<div class="youtubelink">
