added functioning menu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 					</div>
 					<div class="product-list not-visible">
 						<ul>
-							<li>
-								<a href="?productID=007"> 007 TEST LINK</a>
-							</li>
+							<li><form>
+								<label for="search-bar" class="hide-me">search bar</label>
+								<input id="search-bar" name="search-bar" type="text" placeholder="search...">
+								<button type="submit">search placeholder</button>
+							</form></li>
 						</ul>
 					</div>
 				</nav>
