added search functionality

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 						<p>select...</p><i class="fas fa-chevron-down"></i>
 					</div>
 					<div class="product-list not-visible">
+						<form>
+							<label for="search-bar" class="hide-me">search bar</label>
+							<input id="search-bar" name="search-bar" type="text" placeholder="search...">
+							<button type="submit"><i class="fas fa-search"></i></button>
+						</form>
 						<ul>
-							<li><form>
-								<label for="search-bar" class="hide-me">search bar</label>
-								<input id="search-bar" name="search-bar" type="text" placeholder="search...">
-								<button type="submit">search placeholder</button>
-							</form></li>
 						</ul>
 					</div>
 				</nav>
